--- a/7.PRETRAIN_METHOD/7.2.KorQuAD_EDA.ipynb
+++ b/7.PRETRAIN_METHOD/7.2.KorQuAD_EDA.ipynb
@@ -23,6 +23,7 @@
     "seed(1234)\n",
     "phoneme_tokenizer = Okt()\n",
     "\n",
+    "DATA_IN_PATH = './data_in/KOR'\n",
     "save_path = \"bert_ckpt/\"\n",
     "if not os.path.exists(save_path):\n",
     "    os.makedirs(save_path)\n",
@@ -259,7 +260,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cloud = WordCloud(font_path = 'data_in/NanumGothic.ttf', width=800, height=600).generate(' '.join(sampled_docs))\n",
+    "font_path = os.path.join(DATA_IN_PATH, 'NanumGothic.ttf')\n",
+    "cloud = WordCloud(font_path = font_path, width=800, height=600).generate(' '.join(sampled_docs))\n",
     "plt.figure(figsize=(15, 10))\n",
     "plt.imshow(cloud)\n",
     "plt.axis('off')"
@@ -282,7 +284,7 @@
     "for d in sampled_docs:\n",
     "    noun_extracted_docs += phoneme_tokenizer.nouns(d)\n",
     "\n",
-    "cloud = WordCloud(font_path = 'data_in/NanumGothic.ttf', width=800, height=600).generate(' '.join(noun_extracted_docs))\n",
+    "cloud = WordCloud(font_path = font_path, width=800, height=600).generate(' '.join(noun_extracted_docs))\n",
     "plt.figure(figsize=(15, 10))\n",
     "plt.imshow(cloud)\n",
     "plt.axis('off')"
@@ -449,7 +451,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cloud = WordCloud(font_path = 'data_in/NanumGothic.ttf', width=800, height=600).generate(' '.join(sampled_questions))\n",
+    "cloud = WordCloud(font_path = font_path, width=800, height=600).generate(' '.join(sampled_questions))\n",
     "plt.figure(figsize=(15, 10))\n",
     "plt.imshow(cloud)\n",
     "plt.axis('off')"
@@ -472,7 +474,7 @@
     "for q in sampled_questions:\n",
     "    noun_extracted_qs += phoneme_tokenizer.nouns(q)\n",
     "\n",
-    "cloud = WordCloud(font_path = 'data_in/NanumGothic.ttf', width=800, height=600).generate(' '.join(noun_extracted_qs))\n",
+    "cloud = WordCloud(font_path = font_path, width=800, height=600).generate(' '.join(noun_extracted_qs))\n",
     "plt.figure(figsize=(15, 10))\n",
     "plt.imshow(cloud)\n",
     "plt.axis('off')"
