--- a/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorNLI.ipynb
+++ b/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorNLI.ipynb
@@ -2,28 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import tensorflow as tf\n",
-    "from transformers import *\n",
+    "from transformers import BertTokenizer, TFBertModel\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from tqdm import tqdm\n",
-    "import numpy as np\n",
-    "import re"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,31 +49,12 @@
     "\n",
     "# BASE PARAM\n",
     "\n",
-    "BATCH_SIZE = 128\n",
+    "BATCH_SIZE = 32\n",
     "NUM_EPOCHS = 3\n",
     "MAX_LEN = 24 * 2 # Average total * 2\n",
     "\n",
-    "DATA_IN_PATH = 'data_in/KOR'\n",
-    "DATA_OUT_PATH = \"data_out/KOR\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0629 15:44:22.472619 140140896171840 tokenization_utils.py:418] loading file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-uncased-vocab.txt from cache at bert_ckpt/bb773818882b0524dc53a1b31a2cc95bc489f000e7e19773ba07846011a6c711.535306b226c42cebebbc0dabc83b92ab11260e9919e21e2ab0beb301f267b4c7\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 토크나이저 종류 설정\n",
-    "\n",
-    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-multilingual-cased\", cache_dir='bert_ckpt', do_lower_case=False)"
+    "DATA_IN_PATH = './data_in/KOR'\n",
+    "DATA_OUT_PATH = \"./data_out/KOR\""
    ]
   },
   {
@@ -89,25 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 32%|███▏      | 306066/942808 [03:20<06:29, 1634.41it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total # dataset: train - 942808, dev - 2490\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load Train dataset\n",
     "\n",
@@ -130,13 +93,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Bert Tokenizer\n",
     "\n",
     "# 참조: https://huggingface.co/transformers/main_classes/tokenizer.html?highlight=encode_plus#transformers.PreTrainedTokenizer.encode_plus\n",
+    "\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-multilingual-cased\", cache_dir='bert_ckpt', do_lower_case=False)\n",
     "\n",
     "def bert_tokenizer_v2(sent1, sent2, MAX_LEN):\n",
     "    \n",
@@ -165,14 +130,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_data_snli_xnli = train_data_snli_xnli[:100]\n",
+    "train_data_snli_xnli = train_data_snli_xnli[:100]\n",
     "\n",
     "input_ids = []\n",
     "attention_masks = []\n",
     "token_type_ids = []\n",
     "\n",
-    "for sent1, sent2 in tqdm(zip(train_data_snli_xnli['sentence1'], train_data_snli_xnli['sentence2']),\n",
-    "                         total=len(train_data_snli_xnli)):\n",
+    "for sent1, sent2 in zip(train_data_snli_xnli['sentence1'], train_data_snli_xnli['sentence2']):\n",
     "    try:\n",
     "        input_id, attention_mask, token_type_id = bert_tokenizer_v2(sent1, sent2, MAX_LEN)\n",
     "\n",
@@ -203,14 +167,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dev_data_xnli = dev_data_xnli[:50]\n",
+    "dev_data_xnli = dev_data_xnli[:50]\n",
     "\n",
     "# 토크나이저를 제외하고는 5장에서 처리한 방식과 유사하게 접근\n",
     "input_ids = []\n",
     "attention_masks = []\n",
     "token_type_ids = []\n",
     "\n",
-    "for sent1, sent2 in tqdm(zip(dev_data_xnli['sentence1'], dev_data_xnli['sentence2'])):\n",
+    "for sent1, sent2 in zip(dev_data_xnli['sentence1'], dev_data_xnli['sentence2']):\n",
     "    try:\n",
     "        input_id, attention_mask, token_type_id = bert_tokenizer_v2(sent1, sent2, MAX_LEN)\n",
     "\n",
@@ -230,19 +194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# train labels: 942808, #dev labels: 2490\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Label을 Netural, Contradiction, Entailment 에서 숫자 형으로 변경한다.\n",
     "label_dict = {\"entailment\": 0, \"contradiction\": 1, \"neutral\": 2}\n",
@@ -292,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,91 +311,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sentence1</th>\n",
-       "      <th>sentence2</th>\n",
-       "      <th>gold_label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>글쎄, 나는 그것에 관해 생각조차 하지 않았지만, 나는 너무 좌절했고, 결국 그에게...</td>\n",
-       "      <td>나는 그와 다시 이야기하지 않았다.</td>\n",
-       "      <td>contradiction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>글쎄, 나는 그것에 관해 생각조차 하지 않았지만, 나는 너무 좌절했고, 결국 그에게...</td>\n",
-       "      <td>나는 다시 그와 이야기를 하기 시작했다는 것에 너무 화가 났다.</td>\n",
-       "      <td>entailment</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>글쎄, 나는 그것에 관해 생각조차 하지 않았지만, 나는 너무 좌절했고, 결국 그에게...</td>\n",
-       "      <td>우리는 좋은 대화를 나눴다.</td>\n",
-       "      <td>neutral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>그리고 저는 그것이 특권이라고 생각했습니다, 그리고 여전히, 여전히, 당시 저는 A...</td>\n",
-       "      <td>그날 현장에 나만 있었던 게 아니라는 걸 몰랐던 것이다.</td>\n",
-       "      <td>neutral</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>그리고 저는 그것이 특권이라고 생각했습니다, 그리고 여전히, 여전히, 당시 저는 A...</td>\n",
-       "      <td>나는 AFFC 공군 경력 분야에서 그 번호를 가진 유일한 사람이라는 인상을 가지고 ...</td>\n",
-       "      <td>entailment</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                           sentence1  \\\n",
-       "0  글쎄, 나는 그것에 관해 생각조차 하지 않았지만, 나는 너무 좌절했고, 결국 그에게...   \n",
-       "1  글쎄, 나는 그것에 관해 생각조차 하지 않았지만, 나는 너무 좌절했고, 결국 그에게...   \n",
-       "2  글쎄, 나는 그것에 관해 생각조차 하지 않았지만, 나는 너무 좌절했고, 결국 그에게...   \n",
-       "3  그리고 저는 그것이 특권이라고 생각했습니다, 그리고 여전히, 여전히, 당시 저는 A...   \n",
-       "4  그리고 저는 그것이 특권이라고 생각했습니다, 그리고 여전히, 여전히, 당시 저는 A...   \n",
-       "\n",
-       "                                           sentence2     gold_label  \n",
-       "0                                나는 그와 다시 이야기하지 않았다.  contradiction  \n",
-       "1                나는 다시 그와 이야기를 하기 시작했다는 것에 너무 화가 났다.     entailment  \n",
-       "2                                    우리는 좋은 대화를 나눴다.        neutral  \n",
-       "3                    그날 현장에 나만 있었던 게 아니라는 걸 몰랐던 것이다.        neutral  \n",
-       "4  나는 AFFC 공군 경력 분야에서 그 번호를 가진 유일한 사람이라는 인상을 가지고 ...     entailment  "
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load Test dataset\n",
     "TEST_XNLI_DF = os.path.join(DATA_IN_PATH, 'KorNLI', 'xnli.test.ko.tsv')\n",
@@ -461,7 +335,7 @@
     "attention_masks = []\n",
     "token_type_ids = []\n",
     "\n",
-    "for sent1, sent2 in tqdm(zip(test_data_xnli['sentence1'], test_data_xnli['sentence2'])):\n",
+    "for sent1, sent2 in zip(test_data_xnli['sentence1'], test_data_xnli['sentence2']):\n",
     "    \n",
     "    try:\n",
     "        input_id, attention_mask, token_type_id = bert_tokenizer_v2(sent1, sent2, MAX_LEN)\n",
@@ -483,17 +357,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# sents: 5010, # labels: 5010\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_data_xnli[\"gold_label_int\"] = test_data_xnli[\"gold_label\"].apply(convert_int)\n",
     "test_data_xnli_labels = np.array(test_data_xnli['gold_label_int'], dtype=int)\n",
@@ -528,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
