--- a/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorSTS.ipynb
+++ b/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorSTS.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "import os\n",
     "import tensorflow as tf\n",
-    "from transformers import *\n",
+    "from transformers import BertTokenizer, TFBertModel\n",
     "\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
@@ -484,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
