--- a/7.PRETRAIN_METHOD/7.4.1.gpt2_finetune_novel_LM.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.1.gpt2_finetune_novel_LM.ipynb
@@ -26,6 +26,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!bash download_gpt2_model.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class GPT2Model(tf.keras.Model):\n",
     "    def __init__(self, dir_path):\n",
     "        super(GPT2Model, self).__init__()\n",
@@ -52,7 +61,7 @@
    "outputs": [],
    "source": [
     "BATCH_SIZE = 16\n",
-    "EPOCHS = 10\n",
+    "NUM_EPOCHS = 10\n",
     "MAX_LEN = 30\n",
     "TOKENIZER_PATH = './gpt_ckpt/gpt2_kor_tokenizer.spiece'\n",
     "\n",
@@ -211,7 +220,7 @@
    "outputs": [],
    "source": [
     "history = gpt_model.fit(input_data, output_data, \n",
-    "                    batch_size=BATCH_SIZE, epochs=EPOCHS,\n",
+    "                    batch_size=BATCH_SIZE, epochs=NUM_EPOCHS,\n",
     "                    validation_split=0.1)"
    ]
   },
