--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_naver_movie.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_naver_movie.ipynb
@@ -21,14 +21,17 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from tqdm import tqdm\n",
     "import numpy as np\n",
-    "import re\n",
-    "\n",
-    "try:\n",
-    "    import setGPU\n",
-    "except:\n",
-    "    print('no setGPU')"
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!bash download_gpt2_model.sh"
    ]
   },
   {
@@ -173,7 +176,7 @@
    "outputs": [],
    "source": [
     "class TFGPT2Classifier(tf.keras.Model):\n",
-    "    def __init__(self, dir_path, num_class=2):\n",
+    "    def __init__(self, dir_path, num_class):\n",
     "        super(TFGPT2Classifier, self).__init__()\n",
     "        \n",
     "        self.gpt2 = TFGPT2Model.from_pretrained(dir_path)\n",
@@ -200,7 +203,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cls_model = TFGPT2Classifier('./gpt_ckpt')"
+    "BASE_MODEL_PATH = './gpt_ckpt'\n",
+    "cls_model = TFGPT2Classifier(dir_path=BASE_MODEL_PATH, num_class=2)"
    ]
   },
   {
