update commands to download gpt models

--- a/7.PRETRAIN_METHOD/7.4.1.gpt2_finetune_novel_LM.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.1.gpt2_finetune_novel_LM.ipynb
@@ -21,12 +21,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "아레 실행 커멘드는 gpt_ckpt 폴더가 있지 않은 경우에만 실행해주세요."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!bash download_gpt2_model.sh"
+    "!wget https://www.dropbox.com/s/nzfa9xpzm4edp6o/gpt_ckpt.zip\n",
+    "!unzip gpt_ckpt.zip"
    ]
   },
   {
