added unzip options

--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorSTS.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorSTS.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "!wget https://www.dropbox.com/s/nzfa9xpzm4edp6o/gpt_ckpt.zip\n",
-    "!unzip gpt_ckpt.zip"
+    "!unzip -o gpt_ckpt.zip"
    ]
   },
   {
