added wget options

--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorNLI.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorNLI.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://www.dropbox.com/s/nzfa9xpzm4edp6o/gpt_ckpt.zip\n",
+    "!wget https://www.dropbox.com/s/nzfa9xpzm4edp6o/gpt_ckpt.zip -O gpt_ckpt.zip\n",
     "!unzip -o gpt_ckpt.zip"
    ]
   },
