--- a/7.PRETRAIN_METHOD/7.2.bert_finetune-NSMC.ipynb
+++ b/7.PRETRAIN_METHOD/7.2.bert_finetune-NSMC.ipynb
@@ -48,7 +48,7 @@
     "tf.random.set_seed(1234)\n",
     "np.random.seed(1234)\n",
     "\n",
-    "BATCH_SIZE = 256\n",
+    "BATCH_SIZE = 32\n",
     "NUM_EPOCHS = 3\n",
     "VALID_SPLIT = 0.2\n",
     "MAX_LEN = 39 # EDA에서 추출된 Max Length\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,6 +94,38 @@
     "\n",
     "print(encode)\n",
     "print(token_print)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[101, 9521, 118741, 35506, 24982, 48549, 117, 9321, 118610, 119081, 48345, 102]\n",
+      "[101, 31178, 11356, 102]\n",
+      "[CLS] 안녕하세요, 반갑습니다 [SEP]\n",
+      "[CLS] Hello world [SEP]\n"
+     ]
+    }
+   ],
+   "source": [
+    "kor_encode = tokenizer.encode(\"안녕하세요, 반갑습니다\")\n",
+    "eng_encode = tokenizer.encode(\"Hello world\")\n",
+    "kor_decode = tokenizer.decode(kor_encode)\n",
+    "eng_decode = tokenizer.decode(eng_encode)\n",
+    "\n",
+    "print(kor_encode)\n",
+    "# [101, 9521, 118741, 35506, 24982, 48549, 117, 9321, 118610, 119081, 48345, 102]\n",
+    "print(eng_encode)\n",
+    "# [101, 31178, 11356, 102]\n",
+    "print(kor_decode)\n",
+    "# [CLS] 안녕하세요, 반갑습니다 [SEP]\n",
+    "print(eng_decode)\n",
+    "# [CLS] Hello world [SEP]"
    ]
   },
   {
