:speech_balloon: Update file name

--- a/7.PRETRAIN_METHOD/7.4.4.gpt2_finetune_KorSTS.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.4.gpt2_finetune_KorSTS.ipynb
@@ -21,12 +21,7 @@
     "\n",
     "from tqdm import tqdm\n",
     "import numpy as np\n",
-    "import re\n",
-    "\n",
-    "try:\n",
-    "    import setGPU\n",
-    "except:\n",
-    "    print('no setGPU')"
+    "import re"
    ]
   },
   {
@@ -81,7 +76,7 @@
    "source": [
     "TOKENIZER_PATH = './gpt_ckpt/gpt2_kor_tokenizer.spiece'\n",
     "\n",
-    "tokenizer = SentencepieceTokenizer(TOKENIZER_PATH)\n",
+    "tokenizer = SentencepieceTokenizer(TOKENIZER_PATH, alpha=0)\n",
     "vocab = nlp.vocab.BERTVocab.from_sentencepiece(TOKENIZER_PATH,\n",
     "                                               mask_token=None,\n",
     "                                               sep_token='<unused0>',\n",
@@ -499,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
