modified data path

--- a/6.CHATBOT/6.2 Preprocess.ipynb
+++ b/6.CHATBOT/6.2 Preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH = 'data_in/ChatBotData.csv_short'\n",
+    "PATH = 'data_in/ChatBotData.csv'\n",
     "VOCAB_PATH = 'data_in/vocabulary.txt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,27 +30,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "char2idx, idx2char, vocab_size = load_vocabulary(PATH, VOCAB_PATH, tokenize_as_morph=False)"
+    "char2idx, idx2char, vocab_size = load_vocabulary(PATH, VOCAB_PATH, tokenize_as_morph=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "index_inputs, input_seq_len = enc_processing(inputs, char2idx, tokenize_as_morph=False)\n",
-    "index_outputs, output_seq_len = dec_output_processing(outputs, char2idx, tokenize_as_morph=False)\n",
-    "index_targets = dec_target_processing(outputs, char2idx, tokenize_as_morph=False)"
+    "index_inputs, input_seq_len = enc_processing(inputs, char2idx, tokenize_as_morph=True)\n",
+    "index_outputs, output_seq_len = dec_output_processing(outputs, char2idx, tokenize_as_morph=True)\n",
+    "index_targets = dec_target_processing(outputs, char2idx, tokenize_as_morph=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,260 +85,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'<PAD>': 0,\n",
-       " '<SOS>': 1,\n",
-       " '<END>': 2,\n",
-       " '<UNK>': 3,\n",
-       " '가끔은': 4,\n",
-       " '들어올': 5,\n",
-       " '운동을': 6,\n",
-       " '같아요': 7,\n",
-       " '땀난다': 8,\n",
-       " '좋다': 9,\n",
-       " '그럴': 10,\n",
-       " '교회': 11,\n",
-       " '좋아요': 12,\n",
-       " '집에': 13,\n",
-       " '것': 14,\n",
-       " '결단은': 15,\n",
-       " '가끔': 16,\n",
-       " '뭘': 17,\n",
-       " '남자친구가': 18,\n",
-       " '또': 19,\n",
-       " '승진': 20,\n",
-       " '쫄딱': 21,\n",
-       " '많이': 22,\n",
-       " '거짓말': 23,\n",
-       " '달에는': 24,\n",
-       " '새출발': 25,\n",
-       " '나오세요': 26,\n",
-       " '빨리': 27,\n",
-       " '같아': 28,\n",
-       " '켜놓고': 29,\n",
-       " '때까지': 30,\n",
-       " '나갔어': 31,\n",
-       " '어서': 32,\n",
-       " '그': 33,\n",
-       " '하세요': 34,\n",
-       " '남자친구': 35,\n",
-       " '식혀주세요': 36,\n",
-       " '전생에': 37,\n",
-       " '있어도': 38,\n",
-       " '더': 39,\n",
-       " '따라': 40,\n",
-       " '훈훈해': 41,\n",
-       " '다시': 42,\n",
-       " '좋을까': 43,\n",
-       " '생일인데': 44,\n",
-       " '가스비': 45,\n",
-       " '잊고': 46,\n",
-       " '혼자를': 47,\n",
-       " '가만': 48,\n",
-       " '나라를': 49,\n",
-       " '선물로': 50,\n",
-       " '생각해보세요': 51,\n",
-       " '너무': 52,\n",
-       " '혼자인게': 53,\n",
-       " '가상화폐': 54,\n",
-       " '게': 55,\n",
-       " '사람도': 56,\n",
-       " '따뜻하게': 57,\n",
-       " '구하셨나요': 58,\n",
-       " '나왔다': 59,\n",
-       " '안': 60,\n",
-       " '필요했던': 61,\n",
-       " '돌아가서': 62,\n",
-       " '땀을': 63,\n",
-       " '빠를수록': 64,\n",
-       " '설득해보세요': 65,\n",
-       " '잘생겼어': 66,\n",
-       " '적당히': 67,\n",
-       " '데려가고': 68,\n",
-       " '해': 69,\n",
-       " '해보세요': 70,\n",
-       " '좋을': 71,\n",
-       " '거예요': 72,\n",
-       " '감기': 73,\n",
-       " '즐기세요': 74,\n",
-       " '가스불': 75,\n",
-       " '줄까': 76,\n",
-       " '마음을': 77,\n",
-       " '절약해봐요': 78,\n",
-       " '나': 79,\n",
-       " '집착하지': 80,\n",
-       " '바빠': 81,\n",
-       " '가난한': 82,\n",
-       " '망함': 83,\n",
-       " '끄고': 84,\n",
-       " '뭐가': 85,\n",
-       " '운동': 86,\n",
-       " '뭐하는지': 87,\n",
-       " '믿어줘': 88,\n",
-       " '켜고': 89,\n",
-       " '자의': 90,\n",
-       " '운동만': 91,\n",
-       " '비싼데': 92,\n",
-       " '돈은': 93,\n",
-       " '다음': 94,\n",
-       " '사세요': 95,\n",
-       " '필요한': 96,\n",
-       " '함께': 97,\n",
-       " '보인다': 98,\n",
-       " '궁금해': 99,\n",
-       " '나온거': 100,\n",
-       " '싶어': 101,\n",
-       " '설움': 102,\n",
-       " '열': 103,\n",
-       " '오늘': 104,\n",
-       " '평소에': 105,\n",
-       " '마세요': 106,\n",
-       " '좀': 107,\n",
-       " '갔어': 108,\n",
-       " '질린다': 109,\n",
-       " '걸리겠어': 110}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "char2idx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: '<PAD>',\n",
-       " 1: '<SOS>',\n",
-       " 2: '<END>',\n",
-       " 3: '<UNK>',\n",
-       " 4: '가끔은',\n",
-       " 5: '들어올',\n",
-       " 6: '운동을',\n",
-       " 7: '같아요',\n",
-       " 8: '땀난다',\n",
-       " 9: '좋다',\n",
-       " 10: '그럴',\n",
-       " 11: '교회',\n",
-       " 12: '좋아요',\n",
-       " 13: '집에',\n",
-       " 14: '것',\n",
-       " 15: '결단은',\n",
-       " 16: '가끔',\n",
-       " 17: '뭘',\n",
-       " 18: '남자친구가',\n",
-       " 19: '또',\n",
-       " 20: '승진',\n",
-       " 21: '쫄딱',\n",
-       " 22: '많이',\n",
-       " 23: '거짓말',\n",
-       " 24: '달에는',\n",
-       " 25: '새출발',\n",
-       " 26: '나오세요',\n",
-       " 27: '빨리',\n",
-       " 28: '같아',\n",
-       " 29: '켜놓고',\n",
-       " 30: '때까지',\n",
-       " 31: '나갔어',\n",
-       " 32: '어서',\n",
-       " 33: '그',\n",
-       " 34: '하세요',\n",
-       " 35: '남자친구',\n",
-       " 36: '식혀주세요',\n",
-       " 37: '전생에',\n",
-       " 38: '있어도',\n",
-       " 39: '더',\n",
-       " 40: '따라',\n",
-       " 41: '훈훈해',\n",
-       " 42: '다시',\n",
-       " 43: '좋을까',\n",
-       " 44: '생일인데',\n",
-       " 45: '가스비',\n",
-       " 46: '잊고',\n",
-       " 47: '혼자를',\n",
-       " 48: '가만',\n",
-       " 49: '나라를',\n",
-       " 50: '선물로',\n",
-       " 51: '생각해보세요',\n",
-       " 52: '너무',\n",
-       " 53: '혼자인게',\n",
-       " 54: '가상화폐',\n",
-       " 55: '게',\n",
-       " 56: '사람도',\n",
-       " 57: '따뜻하게',\n",
-       " 58: '구하셨나요',\n",
-       " 59: '나왔다',\n",
-       " 60: '안',\n",
-       " 61: '필요했던',\n",
-       " 62: '돌아가서',\n",
-       " 63: '땀을',\n",
-       " 64: '빠를수록',\n",
-       " 65: '설득해보세요',\n",
-       " 66: '잘생겼어',\n",
-       " 67: '적당히',\n",
-       " 68: '데려가고',\n",
-       " 69: '해',\n",
-       " 70: '해보세요',\n",
-       " 71: '좋을',\n",
-       " 72: '거예요',\n",
-       " 73: '감기',\n",
-       " 74: '즐기세요',\n",
-       " 75: '가스불',\n",
-       " 76: '줄까',\n",
-       " 77: '마음을',\n",
-       " 78: '절약해봐요',\n",
-       " 79: '나',\n",
-       " 80: '집착하지',\n",
-       " 81: '바빠',\n",
-       " 82: '가난한',\n",
-       " 83: '망함',\n",
-       " 84: '끄고',\n",
-       " 85: '뭐가',\n",
-       " 86: '운동',\n",
-       " 87: '뭐하는지',\n",
-       " 88: '믿어줘',\n",
-       " 89: '켜고',\n",
-       " 90: '자의',\n",
-       " 91: '운동만',\n",
-       " 92: '비싼데',\n",
-       " 93: '돈은',\n",
-       " 94: '다음',\n",
-       " 95: '사세요',\n",
-       " 96: '필요한',\n",
-       " 97: '함께',\n",
-       " 98: '보인다',\n",
-       " 99: '궁금해',\n",
-       " 100: '나온거',\n",
-       " 101: '싶어',\n",
-       " 102: '설움',\n",
-       " 103: '열',\n",
-       " 104: '오늘',\n",
-       " 105: '평소에',\n",
-       " 106: '마세요',\n",
-       " 107: '좀',\n",
-       " 108: '갔어',\n",
-       " 109: '질린다',\n",
-       " 110: '걸리겠어'}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "idx2char"
    ]
@@ -360,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
