updated by new feedbacks on 20201218

--- a/4.TEXT_CLASSIFICATION/4.1.4 Linear Regression with Word2Vec.ipynb
+++ b/4.TEXT_CLASSIFICATION/4.1.4 Linear Regression with Word2Vec.ipynb
@@ -38,7 +38,6 @@
    "outputs": [],
    "source": [
     "DATA_IN_PATH = './data_in/'\n",
-    "DATA_OUT_PATH = './data_out/'\n",
     "TRAIN_CLEAN_DATA = 'train_clean.csv'\n",
     "\n",
     "RANDOM_SEED = 42\n",
@@ -192,18 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predicted = lgs.predict(X_test)\n",
-    "from sklearn import metrics\n",
-    "\n",
-    "fpr, tpr, _ = metrics.roc_curve(y_test, (lgs.predict_proba(X_test)[:, 1]))\n",
-    "auc = metrics.auc(fpr, tpr)\n",
-    "\n",
-    "print(\"------------\")\n",
-    "print(\"Accuracy: %f\" % lgs.score(X_test, y_test))  #checking the accuracy\n",
-    "print(\"Precision: %f\" % metrics.precision_score(y_test, predicted))\n",
-    "print(\"Recall: %f\" % metrics.recall_score(y_test, predicted))\n",
-    "print(\"F1-Score: %f\" % metrics.f1_score(y_test, predicted))\n",
-    "print(\"AUC: %f\" % auc)"
+    "print(\"Accuracy: %f\" % lgs.score(X_test, y_test)) "
    ]
   },
   {
@@ -254,30 +242,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_predicted = lgs.predict(test_data_vecs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ids = list(test_data['id'])\n",
+    "DATA_OUT_PATH = './data_out/'\n",
     "\n",
-    "answer_dataset = pd.DataFrame({'id': ids, 'sentiment': test_predicted})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "test_predicted = lgs.predict(test_data_vecs)\n",
+    "\n",
     "if not os.path.exists(DATA_OUT_PATH):\n",
     "    os.makedirs(DATA_OUT_PATH)\n",
-    "\n",
+    "    \n",
+    "ids = list(test_data['id'])\n",
+    "answer_dataset = pd.DataFrame({'id': ids, 'sentiment': test_predicted})\n",
     "answer_dataset.to_csv(DATA_OUT_PATH + 'lgs_w2v_answer.csv', index=False, quoting=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = \"300features_40minwords_10context\"\n",
+    "model.save(model_name)"
    ]
   }
  ],
@@ -297,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
