--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune_NSMC.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune_NSMC.ipynb
@@ -38,8 +38,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://www.dropbox.com/s/nzfa9xpzm4edp6o/gpt_ckpt.zip -O gpt_ckpt.zip\n",
-    "!unzip -o gpt_ckpt.zip"
+    "import wget\n",
+    "import zipfile\n",
+    "\n",
+    "wget.download('https://github.com/NLP-kr/tensorflow-ml-nlp-tf2/releases/download/v1.0/gpt_ckpt.zip')\n",
+    "\n",
+    "with zipfile.ZipFile('gpt_ckpt.zip') as z:\n",
+    "    z.extractall()"
    ]
   },
   {
@@ -365,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
