--- a/6.CHATBOT/6.3.preprocess.ipynb
+++ b/6.CHATBOT/6.3.preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH = 'data_in/ChatBotData.csv'\n",
+    "PATH = 'data_in/ChatBotData.csv_short'\n",
     "VOCAB_PATH = 'data_in/vocabulary.txt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,18 +30,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20/20 [00:00<00:00, 457.99it/s]\n",
+      "100%|██████████| 20/20 [00:00<00:00, 256.02it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "char2idx, idx2char, vocab_size = load_vocabulary(PATH, VOCAB_PATH, tokenize_as_morph=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20/20 [00:00<00:00, 462.61it/s]\n",
+      "100%|██████████| 20/20 [00:00<00:00, 247.84it/s]\n",
+      "100%|██████████| 20/20 [00:00<00:00, 386.92it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "index_inputs, input_seq_len = enc_processing(inputs, char2idx, tokenize_as_morph=True)\n",
     "index_outputs, output_seq_len = dec_output_processing(outputs, char2idx, tokenize_as_morph=True)\n",
@@ -50,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,11 +104,284 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'<PAD>': 0,\n",
+       " '<SOS>': 1,\n",
+       " '<END>': 2,\n",
+       " '<UNK>': 3,\n",
+       " '승진': 4,\n",
+       " '불': 5,\n",
+       " '설득': 6,\n",
+       " '절약': 7,\n",
+       " '좋을까': 8,\n",
+       " '마음': 9,\n",
+       " '가상': 10,\n",
+       " '출발': 11,\n",
+       " '에는': 12,\n",
+       " '선물': 13,\n",
+       " '따라': 14,\n",
+       " '사세요': 15,\n",
+       " '그럴거예요': 16,\n",
+       " '줄까': 17,\n",
+       " '따뜻하게': 18,\n",
+       " '다음': 19,\n",
+       " '남자친구': 20,\n",
+       " '달': 21,\n",
+       " '구': 22,\n",
+       " '훈훈해': 23,\n",
+       " '믿어줘': 24,\n",
+       " '가스': 25,\n",
+       " '까지': 26,\n",
+       " '딱': 27,\n",
+       " '인데': 28,\n",
+       " '빨리': 29,\n",
+       " '들어올거예요': 30,\n",
+       " '해보세요': 31,\n",
+       " '가만있어도': 32,\n",
+       " '자의': 33,\n",
+       " '운동': 34,\n",
+       " '거짓말': 35,\n",
+       " '열': 36,\n",
+       " '갔어': 37,\n",
+       " '보인다': 38,\n",
+       " '또': 39,\n",
+       " '생일': 40,\n",
+       " '땀': 41,\n",
+       " '데려가고싶어': 42,\n",
+       " '비비': 43,\n",
+       " '좋을것': 44,\n",
+       " '착하지': 45,\n",
+       " '비': 46,\n",
+       " '더': 47,\n",
+       " '로': 48,\n",
+       " '필요했던게': 49,\n",
+       " '궁금해': 50,\n",
+       " '돈': 51,\n",
+       " '가끔': 52,\n",
+       " '즐기세요': 53,\n",
+       " '오늘': 54,\n",
+       " '가': 55,\n",
+       " '감기': 56,\n",
+       " '하셨나요': 57,\n",
+       " '어서': 58,\n",
+       " '너': 59,\n",
+       " '돌아가서': 60,\n",
+       " '나갔어': 61,\n",
+       " '좋아요': 62,\n",
+       " '하는지': 63,\n",
+       " '같아요': 64,\n",
+       " '식혀주세요': 65,\n",
+       " '가난한': 66,\n",
+       " '적당히하세요': 67,\n",
+       " '많이': 68,\n",
+       " '켜놓고': 69,\n",
+       " '나온거': 70,\n",
+       " '집': 71,\n",
+       " '너무': 72,\n",
+       " '나왔다': 73,\n",
+       " '바빠': 74,\n",
+       " '를': 75,\n",
+       " '뭐': 76,\n",
+       " '함께': 77,\n",
+       " '은': 78,\n",
+       " '평소': 79,\n",
+       " '동': 80,\n",
+       " '무운': 81,\n",
+       " '다': 82,\n",
+       " '난': 83,\n",
+       " '해봐요': 84,\n",
+       " '때': 85,\n",
+       " '좀질': 86,\n",
+       " '사람': 87,\n",
+       " '하세요': 88,\n",
+       " '나라': 89,\n",
+       " '잊고': 90,\n",
+       " '잘생겼어': 91,\n",
+       " '가나안': 92,\n",
+       " '그': 93,\n",
+       " '같아': 94,\n",
+       " '켜고': 95,\n",
+       " '필요한것': 96,\n",
+       " '빠를수록': 97,\n",
+       " '설움': 98,\n",
+       " '도': 99,\n",
+       " '결단': 100,\n",
+       " '뭘': 101,\n",
+       " '을': 102,\n",
+       " '화폐': 103,\n",
+       " '생각': 104,\n",
+       " '다시': 105,\n",
+       " '새': 106,\n",
+       " '전생': 107,\n",
+       " '만해': 108,\n",
+       " '좋다': 109,\n",
+       " '인게': 110,\n",
+       " '무집': 111,\n",
+       " '에': 112,\n",
+       " '쫄': 113,\n",
+       " '교회': 114,\n",
+       " '마세요': 115,\n",
+       " '싼데': 116,\n",
+       " '린다': 117,\n",
+       " '혼자': 118,\n",
+       " '걸리겠어': 119,\n",
+       " '망함': 120,\n",
+       " '끄고나오세요': 121}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "char2idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: '<PAD>',\n",
+       " 1: '<SOS>',\n",
+       " 2: '<END>',\n",
+       " 3: '<UNK>',\n",
+       " 4: '승진',\n",
+       " 5: '불',\n",
+       " 6: '설득',\n",
+       " 7: '절약',\n",
+       " 8: '좋을까',\n",
+       " 9: '마음',\n",
+       " 10: '가상',\n",
+       " 11: '출발',\n",
+       " 12: '에는',\n",
+       " 13: '선물',\n",
+       " 14: '따라',\n",
+       " 15: '사세요',\n",
+       " 16: '그럴거예요',\n",
+       " 17: '줄까',\n",
+       " 18: '따뜻하게',\n",
+       " 19: '다음',\n",
+       " 20: '남자친구',\n",
+       " 21: '달',\n",
+       " 22: '구',\n",
+       " 23: '훈훈해',\n",
+       " 24: '믿어줘',\n",
+       " 25: '가스',\n",
+       " 26: '까지',\n",
+       " 27: '딱',\n",
+       " 28: '인데',\n",
+       " 29: '빨리',\n",
+       " 30: '들어올거예요',\n",
+       " 31: '해보세요',\n",
+       " 32: '가만있어도',\n",
+       " 33: '자의',\n",
+       " 34: '운동',\n",
+       " 35: '거짓말',\n",
+       " 36: '열',\n",
+       " 37: '갔어',\n",
+       " 38: '보인다',\n",
+       " 39: '또',\n",
+       " 40: '생일',\n",
+       " 41: '땀',\n",
+       " 42: '데려가고싶어',\n",
+       " 43: '비비',\n",
+       " 44: '좋을것',\n",
+       " 45: '착하지',\n",
+       " 46: '비',\n",
+       " 47: '더',\n",
+       " 48: '로',\n",
+       " 49: '필요했던게',\n",
+       " 50: '궁금해',\n",
+       " 51: '돈',\n",
+       " 52: '가끔',\n",
+       " 53: '즐기세요',\n",
+       " 54: '오늘',\n",
+       " 55: '가',\n",
+       " 56: '감기',\n",
+       " 57: '하셨나요',\n",
+       " 58: '어서',\n",
+       " 59: '너',\n",
+       " 60: '돌아가서',\n",
+       " 61: '나갔어',\n",
+       " 62: '좋아요',\n",
+       " 63: '하는지',\n",
+       " 64: '같아요',\n",
+       " 65: '식혀주세요',\n",
+       " 66: '가난한',\n",
+       " 67: '적당히하세요',\n",
+       " 68: '많이',\n",
+       " 69: '켜놓고',\n",
+       " 70: '나온거',\n",
+       " 71: '집',\n",
+       " 72: '너무',\n",
+       " 73: '나왔다',\n",
+       " 74: '바빠',\n",
+       " 75: '를',\n",
+       " 76: '뭐',\n",
+       " 77: '함께',\n",
+       " 78: '은',\n",
+       " 79: '평소',\n",
+       " 80: '동',\n",
+       " 81: '무운',\n",
+       " 82: '다',\n",
+       " 83: '난',\n",
+       " 84: '해봐요',\n",
+       " 85: '때',\n",
+       " 86: '좀질',\n",
+       " 87: '사람',\n",
+       " 88: '하세요',\n",
+       " 89: '나라',\n",
+       " 90: '잊고',\n",
+       " 91: '잘생겼어',\n",
+       " 92: '가나안',\n",
+       " 93: '그',\n",
+       " 94: '같아',\n",
+       " 95: '켜고',\n",
+       " 96: '필요한것',\n",
+       " 97: '빠를수록',\n",
+       " 98: '설움',\n",
+       " 99: '도',\n",
+       " 100: '결단',\n",
+       " 101: '뭘',\n",
+       " 102: '을',\n",
+       " 103: '화폐',\n",
+       " 104: '생각',\n",
+       " 105: '다시',\n",
+       " 106: '새',\n",
+       " 107: '전생',\n",
+       " 108: '만해',\n",
+       " 109: '좋다',\n",
+       " 110: '인게',\n",
+       " 111: '무집',\n",
+       " 112: '에',\n",
+       " 113: '쫄',\n",
+       " 114: '교회',\n",
+       " 115: '마세요',\n",
+       " 116: '싼데',\n",
+       " 117: '린다',\n",
+       " 118: '혼자',\n",
+       " 119: '걸리겠어',\n",
+       " 120: '망함',\n",
+       " 121: '끄고나오세요'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "idx2char"
    ]
   },
   {
@@ -97,9 +389,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "idx2char"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -118,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
