--- a/6.CHATBOT/6.3.preprocess.ipynb
+++ b/6.CHATBOT/6.3.preprocess.ipynb
@@ -32,39 +32,20 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [00:00<00:00, 457.99it/s]\n",
-      "100%|██████████| 20/20 [00:00<00:00, 256.02it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "char2idx, idx2char, vocab_size = load_vocabulary(PATH, VOCAB_PATH, tokenize_as_morph=True)"
+    "char2idx, idx2char, vocab_size = load_vocabulary(PATH, VOCAB_PATH, tokenize_as_morph=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [00:00<00:00, 462.61it/s]\n",
-      "100%|██████████| 20/20 [00:00<00:00, 247.84it/s]\n",
-      "100%|██████████| 20/20 [00:00<00:00, 386.92it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "index_inputs, input_seq_len = enc_processing(inputs, char2idx, tokenize_as_morph=True)\n",
-    "index_outputs, output_seq_len = dec_output_processing(outputs, char2idx, tokenize_as_morph=True)\n",
-    "index_targets = dec_target_processing(outputs, char2idx, tokenize_as_morph=True)"
+    "index_inputs, input_seq_len = enc_processing(inputs, char2idx, tokenize_as_morph=False)\n",
+    "index_outputs, output_seq_len = dec_output_processing(outputs, char2idx, tokenize_as_morph=False)\n",
+    "index_targets = dec_target_processing(outputs, char2idx, tokenize_as_morph=False)"
    ]
   },
   {
@@ -114,124 +95,113 @@
        " '<SOS>': 1,\n",
        " '<END>': 2,\n",
        " '<UNK>': 3,\n",
-       " '승진': 4,\n",
-       " '불': 5,\n",
-       " '설득': 6,\n",
-       " '절약': 7,\n",
-       " '좋을까': 8,\n",
-       " '마음': 9,\n",
-       " '가상': 10,\n",
-       " '출발': 11,\n",
-       " '에는': 12,\n",
-       " '선물': 13,\n",
-       " '따라': 14,\n",
-       " '사세요': 15,\n",
-       " '그럴거예요': 16,\n",
-       " '줄까': 17,\n",
-       " '따뜻하게': 18,\n",
-       " '다음': 19,\n",
-       " '남자친구': 20,\n",
-       " '달': 21,\n",
-       " '구': 22,\n",
-       " '훈훈해': 23,\n",
-       " '믿어줘': 24,\n",
-       " '가스': 25,\n",
-       " '까지': 26,\n",
-       " '딱': 27,\n",
-       " '인데': 28,\n",
-       " '빨리': 29,\n",
-       " '들어올거예요': 30,\n",
-       " '해보세요': 31,\n",
-       " '가만있어도': 32,\n",
-       " '자의': 33,\n",
-       " '운동': 34,\n",
-       " '거짓말': 35,\n",
-       " '열': 36,\n",
-       " '갔어': 37,\n",
-       " '보인다': 38,\n",
-       " '또': 39,\n",
-       " '생일': 40,\n",
-       " '땀': 41,\n",
-       " '데려가고싶어': 42,\n",
-       " '비비': 43,\n",
-       " '좋을것': 44,\n",
-       " '착하지': 45,\n",
-       " '비': 46,\n",
-       " '더': 47,\n",
-       " '로': 48,\n",
-       " '필요했던게': 49,\n",
-       " '궁금해': 50,\n",
-       " '돈': 51,\n",
-       " '가끔': 52,\n",
-       " '즐기세요': 53,\n",
-       " '오늘': 54,\n",
-       " '가': 55,\n",
-       " '감기': 56,\n",
-       " '하셨나요': 57,\n",
-       " '어서': 58,\n",
-       " '너': 59,\n",
-       " '돌아가서': 60,\n",
-       " '나갔어': 61,\n",
-       " '좋아요': 62,\n",
-       " '하는지': 63,\n",
-       " '같아요': 64,\n",
-       " '식혀주세요': 65,\n",
-       " '가난한': 66,\n",
-       " '적당히하세요': 67,\n",
-       " '많이': 68,\n",
-       " '켜놓고': 69,\n",
-       " '나온거': 70,\n",
-       " '집': 71,\n",
-       " '너무': 72,\n",
-       " '나왔다': 73,\n",
-       " '바빠': 74,\n",
-       " '를': 75,\n",
-       " '뭐': 76,\n",
-       " '함께': 77,\n",
-       " '은': 78,\n",
-       " '평소': 79,\n",
-       " '동': 80,\n",
-       " '무운': 81,\n",
-       " '다': 82,\n",
-       " '난': 83,\n",
-       " '해봐요': 84,\n",
-       " '때': 85,\n",
-       " '좀질': 86,\n",
-       " '사람': 87,\n",
-       " '하세요': 88,\n",
-       " '나라': 89,\n",
-       " '잊고': 90,\n",
-       " '잘생겼어': 91,\n",
-       " '가나안': 92,\n",
-       " '그': 93,\n",
-       " '같아': 94,\n",
-       " '켜고': 95,\n",
-       " '필요한것': 96,\n",
-       " '빠를수록': 97,\n",
-       " '설움': 98,\n",
-       " '도': 99,\n",
-       " '결단': 100,\n",
-       " '뭘': 101,\n",
-       " '을': 102,\n",
-       " '화폐': 103,\n",
-       " '생각': 104,\n",
-       " '다시': 105,\n",
-       " '새': 106,\n",
-       " '전생': 107,\n",
-       " '만해': 108,\n",
-       " '좋다': 109,\n",
-       " '인게': 110,\n",
-       " '무집': 111,\n",
-       " '에': 112,\n",
-       " '쫄': 113,\n",
-       " '교회': 114,\n",
-       " '마세요': 115,\n",
-       " '싼데': 116,\n",
-       " '린다': 117,\n",
-       " '혼자': 118,\n",
-       " '걸리겠어': 119,\n",
-       " '망함': 120,\n",
-       " '끄고나오세요': 121}"
+       " '다시': 4,\n",
+       " '거예요': 5,\n",
+       " '싶어': 6,\n",
+       " '따라': 7,\n",
+       " '가상화폐': 8,\n",
+       " '남자친구': 9,\n",
+       " '끄고': 10,\n",
+       " '켜고': 11,\n",
+       " '집에': 12,\n",
+       " '나오세요': 13,\n",
+       " '믿어줘': 14,\n",
+       " '가만': 15,\n",
+       " '사람도': 16,\n",
+       " '운동만': 17,\n",
+       " '집착하지': 18,\n",
+       " '나왔다': 19,\n",
+       " '따뜻하게': 20,\n",
+       " '것': 21,\n",
+       " '잊고': 22,\n",
+       " '혼자를': 23,\n",
+       " '운동을': 24,\n",
+       " '빠를수록': 25,\n",
+       " '같아요': 26,\n",
+       " '열': 27,\n",
+       " '그': 28,\n",
+       " '해보세요': 29,\n",
+       " '돈은': 30,\n",
+       " '같아': 31,\n",
+       " '절약해봐요': 32,\n",
+       " '필요한': 33,\n",
+       " '오늘': 34,\n",
+       " '그럴': 35,\n",
+       " '해': 36,\n",
+       " '나갔어': 37,\n",
+       " '나라를': 38,\n",
+       " '가스불': 39,\n",
+       " '함께': 40,\n",
+       " '생일인데': 41,\n",
+       " '뭐가': 42,\n",
+       " '구하셨나요': 43,\n",
+       " '가난한': 44,\n",
+       " '더': 45,\n",
+       " '질린다': 46,\n",
+       " '감기': 47,\n",
+       " '사세요': 48,\n",
+       " '땀난다': 49,\n",
+       " '운동': 50,\n",
+       " '가스비': 51,\n",
+       " '자의': 52,\n",
+       " '빨리': 53,\n",
+       " '좋다': 54,\n",
+       " '새출발': 55,\n",
+       " '생각해보세요': 56,\n",
+       " '식혀주세요': 57,\n",
+       " '설득해보세요': 58,\n",
+       " '선물로': 59,\n",
+       " '뭘': 60,\n",
+       " '갔어': 61,\n",
+       " '다음': 62,\n",
+       " '마세요': 63,\n",
+       " '땀을': 64,\n",
+       " '나온거': 65,\n",
+       " '돌아가서': 66,\n",
+       " '안': 67,\n",
+       " '켜놓고': 68,\n",
+       " '있어도': 69,\n",
+       " '때까지': 70,\n",
+       " '마음을': 71,\n",
+       " '보인다': 72,\n",
+       " '승진': 73,\n",
+       " '줄까': 74,\n",
+       " '망함': 75,\n",
+       " '어서': 76,\n",
+       " '궁금해': 77,\n",
+       " '잘생겼어': 78,\n",
+       " '필요했던': 79,\n",
+       " '설움': 80,\n",
+       " '달에는': 81,\n",
+       " '좀': 82,\n",
+       " '평소에': 83,\n",
+       " '즐기세요': 84,\n",
+       " '거짓말': 85,\n",
+       " '너무': 86,\n",
+       " '데려가고': 87,\n",
+       " '적당히': 88,\n",
+       " '또': 89,\n",
+       " '나': 90,\n",
+       " '전생에': 91,\n",
+       " '쫄딱': 92,\n",
+       " '혼자인게': 93,\n",
+       " '하세요': 94,\n",
+       " '많이': 95,\n",
+       " '가끔은': 96,\n",
+       " '좋을': 97,\n",
+       " '게': 98,\n",
+       " '남자친구가': 99,\n",
+       " '결단은': 100,\n",
+       " '교회': 101,\n",
+       " '가끔': 102,\n",
+       " '걸리겠어': 103,\n",
+       " '좋을까': 104,\n",
+       " '들어올': 105,\n",
+       " '바빠': 106,\n",
+       " '비싼데': 107,\n",
+       " '훈훈해': 108,\n",
+       " '좋아요': 109,\n",
+       " '뭐하는지': 110}"
       ]
      },
      "execution_count": 17,
@@ -255,124 +225,113 @@
        " 1: '<SOS>',\n",
        " 2: '<END>',\n",
        " 3: '<UNK>',\n",
-       " 4: '승진',\n",
-       " 5: '불',\n",
-       " 6: '설득',\n",
-       " 7: '절약',\n",
-       " 8: '좋을까',\n",
-       " 9: '마음',\n",
-       " 10: '가상',\n",
-       " 11: '출발',\n",
-       " 12: '에는',\n",
-       " 13: '선물',\n",
-       " 14: '따라',\n",
-       " 15: '사세요',\n",
-       " 16: '그럴거예요',\n",
-       " 17: '줄까',\n",
-       " 18: '따뜻하게',\n",
-       " 19: '다음',\n",
-       " 20: '남자친구',\n",
-       " 21: '달',\n",
-       " 22: '구',\n",
-       " 23: '훈훈해',\n",
-       " 24: '믿어줘',\n",
-       " 25: '가스',\n",
-       " 26: '까지',\n",
-       " 27: '딱',\n",
-       " 28: '인데',\n",
-       " 29: '빨리',\n",
-       " 30: '들어올거예요',\n",
-       " 31: '해보세요',\n",
-       " 32: '가만있어도',\n",
-       " 33: '자의',\n",
-       " 34: '운동',\n",
-       " 35: '거짓말',\n",
-       " 36: '열',\n",
-       " 37: '갔어',\n",
-       " 38: '보인다',\n",
-       " 39: '또',\n",
-       " 40: '생일',\n",
-       " 41: '땀',\n",
-       " 42: '데려가고싶어',\n",
-       " 43: '비비',\n",
-       " 44: '좋을것',\n",
-       " 45: '착하지',\n",
-       " 46: '비',\n",
-       " 47: '더',\n",
-       " 48: '로',\n",
-       " 49: '필요했던게',\n",
-       " 50: '궁금해',\n",
-       " 51: '돈',\n",
-       " 52: '가끔',\n",
-       " 53: '즐기세요',\n",
-       " 54: '오늘',\n",
-       " 55: '가',\n",
-       " 56: '감기',\n",
-       " 57: '하셨나요',\n",
-       " 58: '어서',\n",
-       " 59: '너',\n",
-       " 60: '돌아가서',\n",
-       " 61: '나갔어',\n",
-       " 62: '좋아요',\n",
-       " 63: '하는지',\n",
-       " 64: '같아요',\n",
-       " 65: '식혀주세요',\n",
-       " 66: '가난한',\n",
-       " 67: '적당히하세요',\n",
-       " 68: '많이',\n",
-       " 69: '켜놓고',\n",
-       " 70: '나온거',\n",
-       " 71: '집',\n",
-       " 72: '너무',\n",
-       " 73: '나왔다',\n",
-       " 74: '바빠',\n",
-       " 75: '를',\n",
-       " 76: '뭐',\n",
-       " 77: '함께',\n",
-       " 78: '은',\n",
-       " 79: '평소',\n",
-       " 80: '동',\n",
-       " 81: '무운',\n",
-       " 82: '다',\n",
-       " 83: '난',\n",
-       " 84: '해봐요',\n",
-       " 85: '때',\n",
-       " 86: '좀질',\n",
-       " 87: '사람',\n",
-       " 88: '하세요',\n",
-       " 89: '나라',\n",
-       " 90: '잊고',\n",
-       " 91: '잘생겼어',\n",
-       " 92: '가나안',\n",
-       " 93: '그',\n",
-       " 94: '같아',\n",
-       " 95: '켜고',\n",
-       " 96: '필요한것',\n",
-       " 97: '빠를수록',\n",
-       " 98: '설움',\n",
-       " 99: '도',\n",
-       " 100: '결단',\n",
-       " 101: '뭘',\n",
-       " 102: '을',\n",
-       " 103: '화폐',\n",
-       " 104: '생각',\n",
-       " 105: '다시',\n",
-       " 106: '새',\n",
-       " 107: '전생',\n",
-       " 108: '만해',\n",
-       " 109: '좋다',\n",
-       " 110: '인게',\n",
-       " 111: '무집',\n",
-       " 112: '에',\n",
-       " 113: '쫄',\n",
-       " 114: '교회',\n",
-       " 115: '마세요',\n",
-       " 116: '싼데',\n",
-       " 117: '린다',\n",
-       " 118: '혼자',\n",
-       " 119: '걸리겠어',\n",
-       " 120: '망함',\n",
-       " 121: '끄고나오세요'}"
+       " 4: '다시',\n",
+       " 5: '거예요',\n",
+       " 6: '싶어',\n",
+       " 7: '따라',\n",
+       " 8: '가상화폐',\n",
+       " 9: '남자친구',\n",
+       " 10: '끄고',\n",
+       " 11: '켜고',\n",
+       " 12: '집에',\n",
+       " 13: '나오세요',\n",
+       " 14: '믿어줘',\n",
+       " 15: '가만',\n",
+       " 16: '사람도',\n",
+       " 17: '운동만',\n",
+       " 18: '집착하지',\n",
+       " 19: '나왔다',\n",
+       " 20: '따뜻하게',\n",
+       " 21: '것',\n",
+       " 22: '잊고',\n",
+       " 23: '혼자를',\n",
+       " 24: '운동을',\n",
+       " 25: '빠를수록',\n",
+       " 26: '같아요',\n",
+       " 27: '열',\n",
+       " 28: '그',\n",
+       " 29: '해보세요',\n",
+       " 30: '돈은',\n",
+       " 31: '같아',\n",
+       " 32: '절약해봐요',\n",
+       " 33: '필요한',\n",
+       " 34: '오늘',\n",
+       " 35: '그럴',\n",
+       " 36: '해',\n",
+       " 37: '나갔어',\n",
+       " 38: '나라를',\n",
+       " 39: '가스불',\n",
+       " 40: '함께',\n",
+       " 41: '생일인데',\n",
+       " 42: '뭐가',\n",
+       " 43: '구하셨나요',\n",
+       " 44: '가난한',\n",
+       " 45: '더',\n",
+       " 46: '질린다',\n",
+       " 47: '감기',\n",
+       " 48: '사세요',\n",
+       " 49: '땀난다',\n",
+       " 50: '운동',\n",
+       " 51: '가스비',\n",
+       " 52: '자의',\n",
+       " 53: '빨리',\n",
+       " 54: '좋다',\n",
+       " 55: '새출발',\n",
+       " 56: '생각해보세요',\n",
+       " 57: '식혀주세요',\n",
+       " 58: '설득해보세요',\n",
+       " 59: '선물로',\n",
+       " 60: '뭘',\n",
+       " 61: '갔어',\n",
+       " 62: '다음',\n",
+       " 63: '마세요',\n",
+       " 64: '땀을',\n",
+       " 65: '나온거',\n",
+       " 66: '돌아가서',\n",
+       " 67: '안',\n",
+       " 68: '켜놓고',\n",
+       " 69: '있어도',\n",
+       " 70: '때까지',\n",
+       " 71: '마음을',\n",
+       " 72: '보인다',\n",
+       " 73: '승진',\n",
+       " 74: '줄까',\n",
+       " 75: '망함',\n",
+       " 76: '어서',\n",
+       " 77: '궁금해',\n",
+       " 78: '잘생겼어',\n",
+       " 79: '필요했던',\n",
+       " 80: '설움',\n",
+       " 81: '달에는',\n",
+       " 82: '좀',\n",
+       " 83: '평소에',\n",
+       " 84: '즐기세요',\n",
+       " 85: '거짓말',\n",
+       " 86: '너무',\n",
+       " 87: '데려가고',\n",
+       " 88: '적당히',\n",
+       " 89: '또',\n",
+       " 90: '나',\n",
+       " 91: '전생에',\n",
+       " 92: '쫄딱',\n",
+       " 93: '혼자인게',\n",
+       " 94: '하세요',\n",
+       " 95: '많이',\n",
+       " 96: '가끔은',\n",
+       " 97: '좋을',\n",
+       " 98: '게',\n",
+       " 99: '남자친구가',\n",
+       " 100: '결단은',\n",
+       " 101: '교회',\n",
+       " 102: '가끔',\n",
+       " 103: '걸리겠어',\n",
+       " 104: '좋을까',\n",
+       " 105: '들어올',\n",
+       " 106: '바빠',\n",
+       " 107: '비싼데',\n",
+       " 108: '훈훈해',\n",
+       " 109: '좋아요',\n",
+       " 110: '뭐하는지'}"
       ]
      },
      "execution_count": 18,
@@ -383,6 +342,13 @@
    "source": [
     "idx2char"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
